letter spacing mobile test fix

--- a/bundle/sass/common.scss
+++ b/bundle/sass/common.scss
@@ -19,12 +19,14 @@ html, body, div {
 html {
   background-color: $color-dark;
   overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering:optimizeLegibility !important;
 }
 
-h1, h2, h3, h4, h5, p, li, span, a { margin:0; }
+h1, h2, h3, h4, h5, p, li, span, a, em, strong { 
+  margin:0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering:optimizeLegibility !important; 
+}
 
 a {
   text-decoration: none;
